# libstreaming-rs

./: .gitignore  Cargo.toml
src/: main.rs
video_processing/: Cargo.toml  build.rs
video_processing/c/: FFMPEG.LICENSE.txt  NVENC.LICENSE.txt  ffmpeg.h
video_processing/c/libavutil/: ffversion.h
video_processing/src/: frame.rs  lib.rs
video_processing/src/decoder/: device.rs  mod.rs  sw_decoder.rs
video_processing/src/encoder/: device.rs  libav_encoder.rs  mod.rs  nvenc_encoder.rs  sw_encoder.rs  vk_encoder.rs  vk_utils.rs
