[package]
name = "video_processing"
version = "0.1.0"
edition = "2021"

[features]
enable_swencoder = ["openh264"]
enable_swdecoder = ["openh264"]
enable_nvenc = []
enable_vulkan = ["ash", "vk-mem"]
enable_ffmpeg = []

# The Software Encoder will ALWAYS be available
[dependencies]
openh264 = { version = "0.6.2", optional = true}# Required for software encoder
ash = {version = "0.38.0+1.3.281", optional = true}
vk-mem = {version = "0.4.0", optional = true}

[target.'cfg(feature = "enable_nvenc")'.dependencies]
nvidia-video-codec-sdk = { version = "0.3.1", features = [] }

[build-dependencies]
bindgen = "0.69.4"
cc = "1.1.8"